kubernetes/apps/home/networking/unifi/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-route
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Unifi
    gethomepage.dev/description: Network Controller
    gethomepage.dev/group: System
    gethomepage.dev/icon: unifi.png
spec:
  hostnames:
  - "unifi.${DOMAIN1}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: unifi
          port: 8443
